@@ -15,6 +15,9 @@ For a complete change history, please see the Subversion log comments.
 Current Version (SVN trunk): 
 ---------------------------- 
 
+- Union Layer: Add support for the layer FILTER expressions, 
+  add "Union:SourceLayerVisible" predefined attribute (#3674)
+
 - fix circle layer drawing for edge case when point1.x==point2.x (#1356)
 
 - fix incorrect quantization for images with very large number of
